force-app/src/objects/cpm__Mandate_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>cpm__Exclude_from_Auto_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you are creating a schedule that you want to run manually by changing the schedule status, please select this option. If Auto Run is enabled, this schedule will otherwise be run automatically.</inlineHelpText>
        <label>Exclude from Auto-Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Generate_Async_Apex_Job_Id__c</fullName>
        <label>Generate Async Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Status_Reason__c</fullName>
        <label>Last Status Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Processor__c</fullName>
        <label>Payment Processor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Process_Async_Apex_Job_Id__c</fullName>
        <label>Process Async Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Processing_Date__c</fullName>
        <label>Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Recurring_Mandate_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Mandate Schedule</label>
        <referenceTo>cpm__Recurring_Mandate_Schedule__c</referenceTo>
        <relationshipLabel>Mandate Schedules</relationshipLabel>
        <relationshipName>Mandate_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Run_Date__c</fullName>
        <description>Date when mandate schedule is run.</description>
        <inlineHelpText>Date when mandate schedule is run.</inlineHelpText>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Status_Before_Failed__c</fullName>
        <label>Status Before Failed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Pending Verification</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Validate Mandates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Sub_Type__c</fullName>
        <description>Information field only, populated by a trigger</description>
        <label>Sub Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Target__c</fullName>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Validate_Async_Apex_Job_Id__c</fullName>
        <label>Validate Async Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Validate_Job_Id__c</fullName>
        <label>Validate Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mandate Schedule</label>
    <listViews>
        <fullName>cpm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MS-{0}</displayFormat>
        <label>Mandate Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mandate Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cpm__ProcessingDate_must_be_in_the_future</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
      AND(
       NOT(ISPICKVAL( cpm__Status__c , &apos;Verified&apos;)),
       NOT(ISPICKVAL( cpm__Status__c , &apos;Done&apos;)),
       NOT(ISPICKVAL( cpm__Status__c , &apos;Pending Verification&apos;)),
       cpm__Processing_Date__c &lt;= TODAY()), true, false )</errorConditionFormula>
        <errorDisplayField>cpm__Processing_Date__c</errorDisplayField>
        <errorMessage>Processing Date must be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Processing_Date_Required_For_BACS_Manual</fullName>
        <active>true</active>
        <errorConditionFormula>AND(cpm__Sub_Type__c = &apos;MANUAL&apos;, ISBLANK(cpm__Processing_Date__c) , CreatedDate &gt;=  DATETIMEVALUE(DATE(2021,7,20)) )</errorConditionFormula>
        <errorDisplayField>cpm__Processing_Date__c</errorDisplayField>
        <errorMessage>Processing Date is a required field for BACS Manual (FinDock as processor)</errorMessage>
    </validationRules>
</CustomObject>